{
  "version": 4,
  "terraform_version": "0.14.7",
  "serial": 142,
  "lineage": "0a905f37-3eb3-7a25-5945-c5c8292cf523",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03ca998611da0fe12",
            "arn": "arn:aws:ec2:ap-southeast-1:592568478375:instance/i-00bf88ac0366fef01",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00bf88ac0366fef01",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-0e50e84dc53129fc8"
              }
            ],
            "primary_network_interface_id": "eni-0e50e84dc53129fc8",
            "private_dns": "ip-10-0-0-42.ap-southeast-1.compute.internal",
            "private_ip": "10.0.0.42",
            "public_dns": "ec2-52-221-223-193.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "52.221.223.193",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a2c560f8ef0d6017",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fbe4ebb3692aa8c8",
            "tags": {
              "Name": "web-server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-002f692ee0b23854d"
            ]
          },
          "dependencies": [
            "aws_network_interface.primary_network_interface",
            "aws_security_group.sg_allow_http",
            "aws_subnet.public_subnet01",
            "aws_vpc.tomyumadv_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "tya_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:592568478375:internet-gateway/igw-03a0527aa0ecb0e10",
            "id": "igw-03a0527aa0ecb0e10",
            "owner_id": "592568478375",
            "tags": {
              "Name": "tomyumadv-igw"
            },
            "vpc_id": "vpc-06e24b9907a2f7e93"
          },
          "dependencies": [
            "aws_vpc.tomyumadv_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_main_route_table_association",
      "name": "set_mainrtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dc3edecb104d15b3",
            "original_route_table_id": "rtb-0b77b6a1e0b7cc69a",
            "route_table_id": "rtb-0672906128f0ccb21",
            "vpc_id": "vpc-06e24b9907a2f7e93"
          },
          "dependencies": [
            "aws_internet_gateway.tya_igw",
            "aws_route_table.publicrtb",
            "aws_vpc.tomyumadv_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "primary_network_interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "eni-0e50e84dc53129fc8",
            "ipv6_address_count": 0,
            "mac_address": "06:71:f9:72:f2:50",
            "private_dns_name": "ip-10-0-0-42.ap-southeast-1.compute.internal",
            "private_ip": "10.0.0.42",
            "private_ips": [
              "10.0.0.42"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-002f692ee0b23854d"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fbe4ebb3692aa8c8",
            "tags": {
              "Name": "primary_network_interface"
            }
          },
          "dependencies": [
            "aws_security_group.sg_allow_http",
            "aws_subnet.public_subnet01",
            "aws_vpc.tomyumadv_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "privatertb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:592568478375:route-table/rtb-09746282776d4a1d5",
            "id": "rtb-09746282776d4a1d5",
            "owner_id": "592568478375",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "tya-private-rtb"
            },
            "vpc_id": "vpc-06e24b9907a2f7e93"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.tomyumadv_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "publicrtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:592568478375:route-table/rtb-0672906128f0ccb21",
            "id": "rtb-0672906128f0ccb21",
            "owner_id": "592568478375",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03a0527aa0ecb0e10",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tya-public-rtb"
            },
            "vpc_id": "vpc-06e24b9907a2f7e93"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.tya_igw",
            "aws_vpc.tomyumadv_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08751de3e7e10ab4d",
            "route_table_id": "rtb-09746282776d4a1d5",
            "subnet_id": "subnet-0f7fbb6aa2e0dadac"
          },
          "dependencies": [
            "aws_route_table.privatertb",
            "aws_subnet.private_subnet01",
            "aws_vpc.tomyumadv_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:592568478375:security-group/sg-002f692ee0b23854d",
            "description": "Allow HTTP inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-002f692ee0b23854d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "sg_allow_http",
            "name_prefix": "",
            "owner_id": "592568478375",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_http_my_ip_only"
            },
            "timeouts": null,
            "vpc_id": "vpc-06e24b9907a2f7e93"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.tomyumadv_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:592568478375:subnet/subnet-0f7fbb6aa2e0dadac",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0f7fbb6aa2e0dadac",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "592568478375",
            "tags": {
              "Name": "tomyumadv-private_subnet"
            },
            "tags_all": {
              "Name": "tomyumadv-private_subnet"
            },
            "vpc_id": "vpc-06e24b9907a2f7e93"
          },
          "dependencies": [
            "aws_vpc.tomyumadv_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:592568478375:subnet/subnet-0fbe4ebb3692aa8c8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-0fbe4ebb3692aa8c8",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "592568478375",
            "tags": {
              "Name": "tomyumadv-public_subnet"
            },
            "tags_all": {
              "Name": "tomyumadv-public_subnet"
            },
            "vpc_id": "vpc-06e24b9907a2f7e93"
          },
          "dependencies": [
            "aws_vpc.tomyumadv_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "tomyumadv_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:592568478375:vpc/vpc-06e24b9907a2f7e93",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-078434c98a3641bb4",
            "default_route_table_id": "rtb-0b77b6a1e0b7cc69a",
            "default_security_group_id": "sg-0923353022ab2b64a",
            "dhcp_options_id": "dopt-75609013",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-06e24b9907a2f7e93",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0b77b6a1e0b7cc69a",
            "owner_id": "592568478375",
            "tags": {
              "Name": "tomyumadv-vpc"
            },
            "tags_all": {
              "Name": "tomyumadv-vpc"
            }
          }
        }
      ]
    }
  ]
}